Fixing textfield dimensions in About screen

--- a/res/layout/about_akan_screen_activity.xml
+++ b/res/layout/about_akan_screen_activity.xml
@@ -59,8 +59,9 @@
            
            <TextView
                 android:id="@+id/about_text"
-            	android:layout_width="300dp"
+            	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
+            	android:layout_margin="10dp"
             	android:layout_centerVertical="true"
             	android:layout_centerHorizontal="true"
             	android:text="@string/about_akan"
@@ -148,7 +149,11 @@
                 
                 <TextView 
                     android:id="@+id/about_air_ticket_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_air_ticket_image"
+                   	android:layout_toRightOf="@+id/about_air_ticket_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -220,7 +225,11 @@
                 
                 <TextView 
                     android:id="@+id/about_telefony_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_telefony_image"
+                   	android:layout_toRightOf="@+id/about_telefony_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -292,7 +301,11 @@
                 
                 <TextView 
                     android:id="@+id/about_postal_services_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_postal_service_image"
+                   	android:layout_toRightOf="@+id/about_postal_service_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -364,7 +377,11 @@
                 
                 <TextView 
                     android:id="@+id/about_office_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_office_image"
+                   	android:layout_toRightOf="@+id/about_office_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -436,7 +453,11 @@
                 
                 <TextView 
                     android:id="@+id/about_alimentation_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_alimentation_image"
+                   	android:layout_toRightOf="@+id/about_alimentation_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -508,7 +529,11 @@
                 
                 <TextView 
                     android:id="@+id/about_accommodation_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_accommodation_image"
+                   	android:layout_toRightOf="@+id/about_accommodation_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -580,7 +605,11 @@
                 
                 <TextView 
                     android:id="@+id/about_lease_vehicle_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_vehicle_freight_image"
+                   	android:layout_toRightOf="@+id/about_vehicle_freight_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -652,7 +681,11 @@
                 
                 <TextView 
                     android:id="@+id/about_fuel_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_fuel_image"
+                   	android:layout_toRightOf="@+id/about_fuel_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -724,7 +757,11 @@
                 
                 <TextView 
                     android:id="@+id/about_safety_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_safety_image"
+                   	android:layout_toRightOf="@+id/about_safety_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -796,7 +833,11 @@
                 
                 <TextView 
                     android:id="@+id/about_technical_work_and_consulting_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_technical_work_and_consulting_image"
+                   	android:layout_toRightOf="@+id/about_technical_work_and_consulting_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -868,7 +909,11 @@
                 
                 <TextView 
                     android:id="@+id/about_disclosure_parliamentary_activity_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_disclosure_parliamentary_activity_image"
+                   	android:layout_toRightOf="@+id/about_disclosure_parliamentary_activity_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -940,7 +985,11 @@
                 
                 <TextView 
                     android:id="@+id/about_air_freight_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_air_freight_image"
+                   	android:layout_toRightOf="@+id/about_air_freight_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -1012,7 +1061,11 @@
                 
                 <TextView 
                     android:id="@+id/about_signature_of_publication_text"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_signature_of_publication_image"
+                   	android:layout_toRightOf="@+id/about_signature_of_publication_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
@@ -1089,7 +1142,7 @@
                     android:background="@drawable/development_bigger"
                     android:id="@+id/about_first_developer_image"
                     android:layout_height="120dp"
-                    android:layout_width="130dp"
+                    android:layout_width="120dp"
                     android:contentDescription="@string/image_description_quota_telephony"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
@@ -1097,12 +1150,14 @@
                 
                 <TextView 
                     android:id="@+id/about_first_developer_information"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_first_developer_image"
+                   	android:layout_toRightOf="@+id/about_first_developer_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="@string/arthur_Jahn"
                     android:textColor="#505F69"
                     android:textSize="15sp"
@@ -1122,7 +1177,7 @@
                     android:background="@drawable/development_bigger"
                     android:id="@+id/about_second_developer_image"
                     android:layout_height="120dp"
-                    android:layout_width="130dp"
+                    android:layout_width="120dp"
                     android:contentDescription="@string/image_description_quota_telephony"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
@@ -1130,12 +1185,14 @@
                 
                 <TextView 
                     android:id="@+id/about_second_developer_information"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_second_developer_image"
+                   	android:layout_toRightOf="@+id/about_second_developer_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="@string/tomaz_martins"
                     android:textColor="#505F69"
                     android:textSize="15sp"
@@ -1155,7 +1212,7 @@
                     android:background="@drawable/development_bigger"
                     android:id="@+id/about_third_developer_image"
                     android:layout_height="120dp"
-                    android:layout_width="130dp"
+                    android:layout_width="120dp"
                     android:contentDescription="@string/image_description_quota_telephony"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
@@ -1163,12 +1220,14 @@
                 
                 <TextView 
                     android:id="@+id/about_third_developer_information"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_third_developer_image"
+                   	android:layout_toRightOf="@+id/about_third_developer_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="@string/thaiane_braga"
                     android:textColor="#505F69"
                     android:textSize="15sp"
@@ -1188,7 +1247,7 @@
                     android:background="@drawable/development_bigger"
                     android:id="@+id/about_fourth_developer_image"
                     android:layout_height="120dp"
-                    android:layout_width="130dp"
+                    android:layout_width="120dp"
                     android:contentDescription="@string/image_description_quota_telephony"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
@@ -1196,12 +1255,14 @@
                 
                 <TextView 
                     android:id="@+id/about_fourth_developer_information"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_fourth_developer_image"
+                   	android:layout_toRightOf="@+id/about_fourth_developer_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="@string/maxwell_almeida"
                     android:textColor="#505F69"
                     android:textSize="15sp"
@@ -1221,7 +1282,7 @@
                     android:background="@drawable/development_bigger"
                     android:id="@+id/about_fifth_developer_image"
                     android:layout_height="120dp"
-                    android:layout_width="130dp"
+                    android:layout_width="120dp"
                     android:contentDescription="@string/image_description_quota_telephony"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
@@ -1229,12 +1290,14 @@
                 
                 <TextView 
                     android:id="@+id/about_fifth_developer_information"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_fifth_developer_image"
+                   	android:layout_toRightOf="@+id/about_fifth_developer_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="@string/matheus_fonseca"
                     android:textColor="#505F69"
                     android:textSize="15sp"
@@ -1282,7 +1345,7 @@
                     android:background="@drawable/design_bigger"
                     android:id="@+id/about_design_image"
                     android:layout_height="120dp"
-                    android:layout_width="130dp"
+                    android:layout_width="120dp"
                     android:contentDescription="@string/image_description_quota_telephony"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
@@ -1290,12 +1353,14 @@
                 
                 <TextView 
                     android:id="@+id/about_design_information"
-                   	android:layout_width="225dp"
+                   	android:layout_width="wrap_content"
+                   	android:layout_marginStart="5dp"
+                   	android:layout_marginLeft="5dp"
+                   	android:layout_toEndOf="@+id/about_design_image"
+                   	android:layout_toRightOf="@+id/about_design_image"
                     android:layout_height="wrap_content"
                    	android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:text="@string/pedro_costa"
                     android:textColor="#505F69"
                     android:textSize="15sp"
